--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,31 +8,36 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" sizes="16x16" href="images/Frame.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700&family=Open+Sans&family=Work+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
-<script src="https://kit.fontawesome.com/3aa8a312dd.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700&family=Open+Sans&family=Work+Sans:wght@400;600;700;800&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3aa8a312dd.js" crossorigin="anonymous"></script>
 
-    
-<style>
-    :root{
-        --primary-color:#F948B2;
-        --secondary-color:#4EC5F7;
-        --third-color:#FFF;
-    }
-</style>
+
+    <style>
+        :root {
+            --primary-color: #F948B2;
+            --secondary-color: #4EC5F7;
+            --third-color: #FFF;
+        }
+    </style>
 
 
 </head>
+
 <body>
     <header>
         <!-- nav part -->
         <nav>
-            <h3 class="nav-title"><img src="images/Frame.png" alt="" width="30%" style="margin-right: 20px;"><span class="gamer">G</span>amer</h3>
+            <h3 class="nav-title"><img src="images/Frame.png" alt="" width="30%" style="margin-right: 20px;"><span
+                    class="gamer">G</span>amer</h3>
             <ul>
                 <li><a href="">About Us</a></li>
                 <li><a href="">Developers</a></li>
-                <li id="background"> Follow Us On&nbsp<a href=""><i class="fa-brands fa-youtube icon"></i> </a>&nbsp   <a href=""><i class="fa-brands
-                fa-tiktok icon"></i></a></li>
+                <li id="background"> Follow Us On&nbsp <a href=""><i class="fa-brands fa-youtube"
+                            style="color: red;"></i> </a>&nbsp<a href=""><i class="fa-brands fa-tiktok"
+                            style="color: black;"></i></a></li>
             </ul>
         </nav>
         <!-- banner part -->
@@ -45,17 +51,89 @@
                     1000s of supported online games
                 </p>
                 <button class="pri-btn">SIGN IN</button>
-                <button class="sec-btn">GO ROGUE</button></div>
+                <button class="sec-btn">GO ROGUE</button>
+            </div>
             <div class="banner-img-container">
                 <div class="banner-img">
                     <img src="images/Group 18.png" alt="">
                 </div>
             </div>
-        </div> 
+        </div>
 
 
     </header>
+    <section class="fun-video">
+        <div class="fun-video-content">
+            <h2 class="title">Online Games <span class="color-title">Funny Videos</span>
+            </h2>
+            <p class="description">A Collection of Hilarious Videos to Brighten Your Day</p>
+        </div>
+        <div class="fun-video-cart">
+            <div>
+                <div class="cart" id="cart-1">
+                    <!-- <img src="images/Rectangle 4.png" alt="" class="fun-video-img"> -->
+                </div>
+                <p style="text-align: center;font-size: 15px;"><small>No Download. No Installs. Play games Instantly on Gamer.</small></p>
+            </div>
 
-    
+            <div>
+                <div class="cart" id="cart-2">
+                    <!-- <img src="images/Rectangle 5.png" alt="" class="fun-video-img"> -->
+                </div>
+                <p style="text-align: center;font-size: 15px;"><small>Did you score? #unblockedgames #school</small></p>
+
+            </div>
+
+            <div>
+                <div class="cart" id="cart-3">
+                    <!-- <img src="images/Rectangle 7.png" alt="" class="fun-video-img"> -->
+
+                    <div class="overlay"></div>
+                    <div class="icon">
+                        <i class="fa-solid fa-play"></i>
+                    </div>
+                </div>
+                <p style="text-align: center;font-size: 15px;"><small>Breaking game records like OG</small></p>
+            </div>
+
+
+            <div>
+                <div class="cart" id="cart-4">
+                    <!-- <img src="images/Rectangle 6.png" alt="" class="fun-video-img"> -->
+                </div>
+                <p style="text-align: center;font-size: 15px;"><small>Busted gaming on school laptop, but you are still lit.</small></p>
+
+            </div>
+
+    </section>
+    <section class="play">
+        <div class="play-content">
+            <h3 class="title">
+                <span class="color-title">Play Instantly,</span> <br>
+                No Downloads <br>
+                No Installs.</h3>
+            <p class="description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+        </div>
+        <div class="play-image"><img class="cowboy" src="images/Rectangle 55.png" alt="" ><img src="images/Rectangle 66.png" alt="" class="cartoon">
+        </div>
+    </section>
+    <section class="game-types">
+        <div class="game-type-1">
+            <div class="games"><img src="images/Rectangle 11.png" alt=""> <h4>Action Game</h4></div>
+            <div class="games"><img src="images/Rectangle 12.png" alt=""><h4>Adventure Game</h4></div>
+            <div class="games"><img src="images/Rectangle 13.png" alt=""><h4>Arcade Games</h4></div>
+            <div class="games"><img src="images/Rectangle 14.png" alt=""><h4>Educational Games</h4></div>
+            <div class="games"><img src="images/Rectangle 15.png" alt=""><h4>Word Games</h4></div>
+        </div>
+        <div class="game-type-2">
+            <div class="games"><img src="images/Rectangle 16.png" alt=""><h4>Stategy Games</h4></div>
+            <div class="games"><img src="images/Rectangle 17.png" alt=""><h4>Puzzle Games</h4></div>
+            <div class="games"><img src="images/Rectangle 18.png" alt=""><h4>Music & Audio Games</h4></div>
+            <div class="games"><img src="images/Rectangle 19.png" alt=""><h4>Role Playing Games</h4></div>
+        </div>
+    </section>
+
+
 </body>
+
 </html>
