final commit of the assignment

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
 
     </header>
+  <main>
     <section class="fun-video">
         <div class="fun-video-content">
             <h2 class="title">Online Games <span class="color-title">Funny Videos</span>
@@ -117,21 +118,67 @@
         <div class="play-image"><img class="cowboy" src="images/Rectangle 55.png" alt="" ><img src="images/Rectangle 66.png" alt="" class="cartoon">
         </div>
     </section>
-    <section class="game-types">
-        <div class="game-type-1">
-            <div class="games"><img src="images/Rectangle 11.png" alt=""> <h4>Action Game</h4></div>
-            <div class="games"><img src="images/Rectangle 12.png" alt=""><h4>Adventure Game</h4></div>
-            <div class="games"><img src="images/Rectangle 13.png" alt=""><h4>Arcade Games</h4></div>
-            <div class="games"><img src="images/Rectangle 14.png" alt=""><h4>Educational Games</h4></div>
-            <div class="games"><img src="images/Rectangle 15.png" alt=""><h4>Word Games</h4></div>
-        </div>
-        <div class="game-type-2">
-            <div class="games"><img src="images/Rectangle 16.png" alt=""><h4>Stategy Games</h4></div>
-            <div class="games"><img src="images/Rectangle 17.png" alt=""><h4>Puzzle Games</h4></div>
-            <div class="games"><img src="images/Rectangle 18.png" alt=""><h4>Music & Audio Games</h4></div>
-            <div class="games"><img src="images/Rectangle 19.png" alt=""><h4>Role Playing Games</h4></div>
+    <section class="game-container">
+        <div class="game-type">
+            <div class="game-type-1">
+                <div class="game">
+                    <img src="images/Rectangle 11.png" alt="">
+                    <p class="game-title">Action Game</p>
+                </div>
+                <div class="game">
+                    <img src="images/Rectangle 12.png" alt="">
+                    <p class="game-title" >Adventure Game</p>
+                </div>
+                <div class="game">
+                    <img src="images/Rectangle 13.png" alt="">
+                    <p class="game-title">Arcade Games</p>
+                </div>
+                <div class="game">
+                    <img src="images/Rectangle 14.png" alt="">
+                    <p class="game-title">Old Games</p>
+                </div>
+                <div class="game">
+                    <img src="images/Rectangle 15.png" alt="">
+                    <p class="game-title">Child Games</p>
+                </div>
+                
+            </div>
+            <div class="game-type-2">
+                <div class="game">
+                    <img class="image" src="images/Rectangle 16.png" alt="">
+                    <p class="game-title">Stategy Games</p>
+                </div>
+                <div class="game">
+                    <img class="image" src="images/Rectangle 17.png" alt="">
+                    <p class="game-title">Puzzle Games<p>
+                </div>
+                <div class="game">
+                    <img class="image" src="images/Rectangle 18.png" alt="">
+                    <p class="game-title">Music Games</p>
+                </div>
+            </div>
         </div>
     </section>
+  </main>
+
+    <footer class="footer" style="text-align: center;">
+        <h3 class="nav-title"style="color:#FFF"><img src="images/Frame.png" alt="" style="margin-right: 20px;width: 86.041px;height: 40px;"><span
+            class="gamer">G</span>amer</h3>
+        <div class="footer-item-1">
+            <a href="">Games</a>
+            <a href="">Our Service</a><a href="">Web Games</a><a href=""></a><a href="">Careers</a><a href="">Support</a>
+            <a href="">Account</a>
+        </div>
+        <div class="footer-item-2"><a href="" class="footer-icon"><i class="fa-brands fa-twitter"></i></a><a href="" class="footer-icon"><i class="fa-brands fa-facebook"></i></a><a href="" class="footer-icon"><i class="fa-brands fa-youtube"></i></a><a href="" class="footer-icon"><i class="fa-brands fa-linkedin"></i></a><a href="" class="footer-icon"><i class="fa-brands fa-instagram"></i></a><a href="" class="footer-icon"></a>
+
+        </div>
+        <div class="footer-item-3">
+            <a href="">Terms & Condition</a><a href="">Privay Policy</a><a href="">Cookies policy</a><a href=""> Privacy Setting</a>
+        </div>
+        <p class="footer-des" style="color: rgba(255, 255, 255, 0.60);margin:0 auto;padding-top: 50px;
+        "><small>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</small></p>
+
+    </footer>
 
 
 </body>
